# rerust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-site.yml  enrich.yml  scan.yml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: exemplars.rs  geiger.rs  github.rs  main.rs  origins.rs  site.rs  store.rs  types.rs
crates/analyzer/src/detect/: classify.rs  commits.rs  enrich.rs  git_history.rs  heuristics.rs  mod.rs  score.rs  transitions.rs
crates/analyzer/src/templates/: index.html.j2
data/: exemplars.txt  known-origins.txt
docs/: CNAME  data.json  index.html
scripts/: backfill-watch.sh  generate_sprites.py  pixel-mcp-setup.md  serve-docs.sh
