[package]
name = "rerust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Detect open-source projects being rewritten in Rust"

[[bin]]
name = "rerust"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
minijinja = "2"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
tempfile = "3"
libc = "0.2"
